--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<button nz-button nzType="primary">Primary</button>
+<div class="button">
+  <button nz-button nzType="primary">Primary</button>
 
-<button nz-button nzType="danger">Danger</button>
+  <button nz-button nzType="dashed" nzDanger>Danger</button>
+</div>
